--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,17 @@
 
-.gitignore
 
 .idea
+
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+
+node_modules/
+db/
+
+package.json
+package-lock.json
+
